Batching Cached Renders

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ subprojects {
         silentMojangMappingsLicense()
     }
 
+    repositories {
+        mavenLocal()
+    }
+    
     dependencies {
         minecraft("com.mojang:minecraft:${rootProject.minecraft_version}")
         mappings(loom.layered {
