--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ subprojects {
         silentMojangMappingsLicense()
     }
 
+    repositories {
+        mavenLocal()
+    }
+    
     dependencies {
         minecraft("com.mojang:minecraft:${rootProject.minecraft_version}")
         mappings(loom.layered {
