--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -29,3 +29,7 @@ public net.minecraft.client.gui.screen.Screen func_230481_d_(Lnet/minecraft/clie
 public net.minecraft.client.gui.screen.Screen func_231160_c_()V
 public net.minecraft.client.gui.screen.Screen func_231155_a_(Ljava/lang/String;Z)V
 public net.minecraft.client.gui.screen.Screen func_231154_a_(Ljava/lang/String;CI)Z
+public net.minecraft.tags.Tag$OptionalTagEntry f_13373_ # id
+public net.minecraft.tags.Tag$TagEntry f_13383_ # id
+public net.minecraft.tags.Tag$OptionalElementEntry f_13363_ # id
+public net.minecraft.tags.Tag$ElementEntry f_13349_ # id
