--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -120,6 +120,7 @@ dependencies {
     modRuntime("curse.maven:rhino-416294:3525704")
     modRuntime("curse.maven:enchantment-descriptions-250419:3566132")
     modRuntime("curse.maven:nomadic-tents-238794:3829966")
+    modRuntime("curse.maven:caelus-308989:3650485")
 }
 
 def modRuntime(str) {
