--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -37,7 +37,4 @@ public net.minecraft.client.gui.screens.Screen tooltipStack
 public net.minecraft.client.renderer.RenderType m_173209_(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;ILnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
 public net.minecraft.client.renderer.RenderType$OutlineProperty
 public net.minecraft.client.renderer.RenderType$CompositeState
-public net.minecraft.tags.Tag$OptionalTagEntry f_13373_ # id
-public net.minecraft.tags.Tag$TagEntry f_13383_ # id
-public net.minecraft.tags.Tag$OptionalElementEntry f_13363_ # id
-public net.minecraft.tags.Tag$ElementEntry f_13349_ # id
+public net.minecraft.tags.TagEntry f_215914_ # tag
