--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,10 +6,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
           java-version: 17
       - name: Build with Gradle
-        run: ./gradlew clean build --refresh-dependencies --stacktrace
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: clean build --refresh-dependencies --stacktrace
