Remove --refresh-dependencies

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: clean build --refresh-dependencies --stacktrace
+          arguments: clean build --stacktrace
