--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -66,7 +66,7 @@ body:
   - type: checkboxes
     id: updates
     attributes:
-      label: By submitting this issue, I have confirmed my REI and REI\'s dependencies are up to date.
+      label: By submitting this issue, I have confirmed my REI and REI's dependencies are up to date.
       options:
         - label: 'Yes'
           required: true
