--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ include "api"
 include "default-plugin"
 include "shared-internals"
 include "runtime-engine"
+include "runtime-engine:logging"
 include "runtime-engine:entry-types"
 include "runtime-engine:entry-stacks"
 include "runtime-engine:categories"
