--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx6G
 base_version=9.1
 unstable=false
-supported_version=1.19
+supported_version=1.19(.1)
 minecraft_version=1.19
 forgeEnabled=true
 forge_version=41.0.94
