Refactors to overlays and reiruntime

--- a/settings.gradle
+++ b/settings.gradle
@@ -36,6 +36,9 @@ include "runtime-frontend:widgets"
 include "runtime-frontend:filtering"
 include "runtime-frontend:display"
 include "runtime-frontend:overlay"
+include "runtime-frontend:paginated-entries"
+include "runtime-frontend:scrolled-entries"
+include "runtime-frontend:favorites-entries"
 include "runtime"
 include "fabric"
 include "forge"
