--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ allprojects {
                 ":runtime-frontend:filtering",
                 ":runtime-frontend:display",
                 ":runtime-frontend:overlay",
+                ":runtime-frontend:paginated-entries",
+                ":runtime-frontend:scrolled-entries",
+                ":runtime-frontend:favorites-entries",
         ]
         depProjects = [
                 ":api",
