--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -56,9 +56,7 @@ loom {
     }
 
     forge {
-        localMods {
-            it.add(project(":jei-internals-workaround").sourceSets.main)
-        }
+        mixinConfig "rei.mixins.json"
     }
 }
 
@@ -68,10 +66,6 @@ dependencies {
     forge("net.minecraftforge:forge:${rootProject.minecraft_version}-${rootProject.forge_version}")
     modApi("me.shedaniel.cloth:cloth-config-forge:${cloth_config_version}")
     modApi("me.shedaniel:architectury-forge:${architectury_version}")
-
-    common(project(path: ":jei-compatibility-layer", configuration: "namedElements")) { transitive false }
-    shadowCommon(project(path: ":jei-compatibility-layer", configuration: "namedElements")) { transitive false }
-    runtimeClasspath(project(path: ":jei-internals-workaround", configuration: "namedElements")) { transitive false }
 
     depProjects.forEach {
         common(project(path: it, configuration: "namedElements")) { transitive false }
