--- a/.github/workflows/curseforge.yml
+++ b/.github/workflows/curseforge.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload Mod
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: build publish forge:publishUnified --stacktrace
+          arguments: build publish forge:publishUnified forge:publishUnified --stacktrace
         env:
           danielshe_curse_api_key: ${{ secrets.CF_API_KEY }}
           modrinth_key: ${{ secrets.MODRINTH_KEY }}
