--- a/default-plugin/build.gradle
+++ b/default-plugin/build.gradle
@@ -27,10 +27,16 @@ task fakeJar(type: Jar, dependsOn: remapJar) {
     classifier null
 }
 
-task fakeForgeJar(type: Jar, dependsOn: remapJar) {
-    from remapJar.archiveFile.map { zipTree(it) }
-    from(rootProject.file("fake/fabric.mod.json")) {
-        into ""
+task fakeForgeJar(type: Jar, dependsOn: jar) {
+    from jar.archiveFile.map { zipTree(it) }
+    from(rootProject.file("fake/mods.toml")) {
+        into "META-INF"
+    }
+    ["REIPlugin", "REIPluginClient", "REIPluginCommon", "REIPluginDedicatedServer",
+     "REIPluginLoader", "REIPluginLoaderClient", "REIPluginLoaderCommon", "REIPluginLoaderDedicatedServer"].each {
+        from(rootProject.file("fake/$it.class")) {
+            into "me/shedaniel/rei/forge"
+        }
     }
     classifier "fake-forge"
 }
