--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,7 @@ include "runtime-engine:plugins"
 include "runtime-engine:views"
 include "runtime-engine:default-runtime-plugin"
 include "runtime-engine:initialization"
+include "runtime-engine:networking"
 include "runtime-frontend"
 include "runtime-frontend:widgets"
 include "runtime-frontend:filtering"
