--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx6G
-base_version=9.1
+base_version=10.0
 unstable=false
-supported_version=1.19-1.19.2
-minecraft_version=22w42a
+supported_version=1.19.3
+minecraft_version=22w43a
 forgeEnabled=false
 forge_version=41.0.94
 fabricloader_version=0.14.10
-cloth_config_version=7.0.73
+cloth_config_version=9.0.92
 modmenu_version=4.0.0
-fabric_api=0.65.0+1.19.3
-architectury_version=7.0.50
+fabric_api=0.65.1+1.19.3
+architectury_version=7.0.52
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
