--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -106,7 +106,7 @@ unifiedPublishing {
     project {
         displayName = "[Fabric $rootProject.supported_version] v$project.version"
         releaseType = "release"
-        gameVersions = ["1.19", "1.19.1", "1.19.2"]
+        gameVersions = ["1.19.3"]
         gameLoaders = ["fabric"]
         changelog = rootProject.releaseChangelog
 
