Initial Port to 1.19.4-pre3

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx6G
-base_version=10.0
+base_version=11.0
 unstable=false
-supported_version=1.19.3
-minecraft_version=1.19.3
-forgeEnabled=true
+supported_version=1.19.4-pre3
+minecraft_version=1.19.4-pre3
+forgeEnabled=false
 forge_version=44.0.0
-fabricloader_version=0.14.11
-cloth_config_version=9.0.94
+fabricloader_version=0.14.17
+cloth_config_version=10.0.95
 modmenu_version=5.0.1
-fabric_api=0.68.1+1.19.3
-architectury_version=7.0.63
+fabric_api=0.75.2+1.19.4
+architectury_version=8.1.72
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
