Update to 23w13a_or_b

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx6G
 base_version=11.0
 unstable=false
-supported_version=1.19.4
-minecraft_version=1.19.4
-forgeEnabled=true
+supported_version=23w13a_or_b
+minecraft_version=23w13a_or_b
+forgeEnabled=false
 forge_version=45.0.6
-fabricloader_version=0.14.17
-cloth_config_version=10.0.96
-modmenu_version=5.0.1
-fabric_api=0.76.0+1.19.4
-architectury_version=8.1.73
+fabricloader_version=0.14.19
+cloth_config_version=11.0.97
+modmenu_version=6.1.0-rc.4
+fabric_api=0.76.3+23w13a_or_b
+architectury_version=9.0.2
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
