--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -76,9 +76,9 @@ dependencies {
     // modRuntime("curse.maven:immersive-engineering-231951:3721708")
     // modRuntime("curse.maven:autoreglib-250363:3326041")
     // modRuntime("curse.maven:ars-nouveau-401955:3814106")
-    // modRuntime("curse.maven:patchouli-306770:3809917")
+    // modRuntime("curse.maven:patchouli-306770:3843443")
     // modRuntime("curse.maven:curios-309927:3748873")
-    // modRuntime("software.bernie.geckolib:geckolib-1.18-forge:3.0.22")
+    // modRuntime("software.bernie.geckolib:geckolib-forge-1.18:3.0.57")
     // modRuntime("curse.maven:little-logistics-570050:3818773")
     // modRuntime("curse.maven:refined-storage-243076:3623324")
     // modRuntime("appeng:appliedenergistics2:10.0.1")
