--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx6G
 base_version=12.0
 unstable=false
-supported_version=1.20-pre6
-minecraft_version=1.20-pre6
+supported_version=1.20-rc1
+minecraft_version=1.20-rc1
 forgeEnabled=false
 forge_version=45.0.6
 fabricloader_version=0.14.21
 cloth_config_version=11.0.98
 modmenu_version=6.1.0-rc.4
-fabric_api=0.82.1+1.20
+fabric_api=0.83.0+1.20
 architectury_version=9.0.5
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
