--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx6G
 base_version=12.0
 unstable=false
-supported_version=1.20
+supported_version=1.20(.1)
 minecraft_version=1.20
 forgeEnabled=true
 forge_version=46.0.1
