--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx6G
 base_version=12.0
 unstable=false
-supported_version=1.20(.1)
-minecraft_version=1.20
-forgeEnabled=true
+supported_version=1.20.2 (23w31a)
+minecraft_version=23w31a
+forgeEnabled=false
 forge_version=46.0.1
-fabricloader_version=0.14.21
-cloth_config_version=11.0.99
+fabricloader_version=0.14.22
+cloth_config_version=12.0.107
 modmenu_version=7.0.0
-fabric_api=0.83.0+1.20
-architectury_version=9.0.7
+fabric_api=0.86.1+1.20.2
+architectury_version=10.0.1
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
