--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx6G
-base_version=12.0
+base_version=13.0
 unstable=false
-supported_version=1.20.2 (23w35a)
-minecraft_version=23w35a
+supported_version=1.20.2-pre1
+minecraft_version=1.20.2-pre1
 forgeEnabled=false
 forge_version=46.0.1
 fabricloader_version=0.14.22
 cloth_config_version=12.0.107
 modmenu_version=7.0.0
-fabric_api=0.87.2+1.20.2
-architectury_version=10.0.4
+fabric_api=0.88.2+1.20.2
+architectury_version=10.0.5
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
