--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -215,7 +215,7 @@ unifiedPublishing {
     project {
         displayName = "[Forge $rootProject.supported_version] v$project.version"
         releaseType = "beta"
-        gameVersions = ["1.20", "1.20.1"]
+        gameVersions = []
         gameLoaders = ["forge"]
         changelog = rootProject.releaseChangelog
 
@@ -237,6 +237,7 @@ unifiedPublishing {
                 token = project.hasProperty("danielshe_curse_api_key") ? project.property("danielshe_curse_api_key") : System.getenv("danielshe_curse_api_key")
                 id = "310111"
                 gameVersions.addAll "Java 17"
+                gameVersions.addAll project.minecraft_version
 
                 relations {
                     depends "roughly-enough-items-hacks"
@@ -249,6 +250,7 @@ unifiedPublishing {
                 token = project.hasProperty("modrinth_key") ? project.property("modrinth_key") : System.getenv("modrinth_key")
                 id = "nfn13YXA"
                 version = "$project.version+$project.name"
+                gameVersions.addAll project.minecraft_version
             }
         }
     }
@@ -277,6 +279,7 @@ unifiedPublishing {
                 token = project.hasProperty("danielshe_curse_api_key") ? project.property("danielshe_curse_api_key") : System.getenv("danielshe_curse_api_key")
                 id = "567899"
                 gameVersions.addAll "Java 17"
+                gameVersions.addAll project.minecraft_version
             }
         }
 
