--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -131,7 +131,7 @@ unifiedPublishing {
             curseforge {
                 token = project.hasProperty("danielshe_curse_api_key") ? project.property("danielshe_curse_api_key") : System.getenv("danielshe_curse_api_key")
                 id = "310111"
-                gameVersions.addAll "Java 17", "1.20.2-Snapshot"
+                gameVersions.addAll "Java 17", "1.20.2-Snapshot", project.minecraft_version
             }
         }
 
