--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ base_version=13.0
 unstable=false
 supported_version=1.20.2
 minecraft_version=1.20.2
-forgeEnabled=false
+forgeEnabled=true
 forge_version=48.0.1
 fabricloader_version=0.14.22
 cloth_config_version=12.0.109
