Rewrite how creative mode tab items are collected

--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -46,3 +46,5 @@ public net.minecraft.world.item.crafting.SmithingTrimRecipe f_266053_ # addition
 public-f net.minecraft.client.gui.font.CodepointMap f_283911_ # empty
 public-f net.minecraft.client.gui.font.CodepointMap f_283938_ # blockMap
 public-f net.minecraft.client.gui.font.CodepointMap f_283773_ # blockConstructor
+public net.minecraft.world.item.CreativeModeTab f_256824_ # displayItemsGenerator
+public net.minecraft.world.item.CreativeModeTab$ItemDisplayBuilder
